--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,22 +1,16 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Ionic Blank
+    <ion-title text-center>
+      Mohamed Aboualama
     </ion-title>
   </ion-toolbar> 
 
-  <ion-nav>
-    <ion-button clear (click)="logout()">
-      <ion-icon name="log-out"></ion-icon>
-    </ion-button>
-    <ion-title>Home</ion-title>
-  </ion-nav>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+  <div text-center class="ion-padding">
+    Thank you for watching my first app with ionic.
+    <p>For More Information <a target="_blank" rel="noopener" href="https://github.com/aboualama">Aboualama</a>.</p>
     
     <ion-button (click)="login()">Login</ion-button> 
     <ion-button (click)="register()">Register</ion-button> 
