--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,15 +1,15 @@
-ion-toolbar{
-    --background: #3880ff;
-    --color: #ffffff;
-}
-ion-content{
-    --background: #fbff07;
-    --color: #000;
-}
-ion-button{
-    --background: #772006;
-}
+// ion-toolbar{
+//     --background: #3880ff;
+//     --color: #ffffff;
+// }
+// ion-content{
+//     --background: #fbff07;
+//     --color: #000;
+// }
+// ion-button{
+//     --background: #772006;
+// }
 
-a{
-    color: #000;
-}
+// a{
+//     color: #000;
+// }
