--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,6 +1,10 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
 
+
+@import "./black.theme";
+@import "./red.theme";
+
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
