--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,11 +8,15 @@
 </ion-header>
 
 <ion-content>
-  <div text-center class="ion-padding">
+  <div text-center class="ion-padding test-black">
     Thank you for watching my first app with ionic.
     <p>For More Information <a target="_blank" rel="noopener" href="https://github.com/aboualama">Aboualama</a>.</p>
     
     <ion-button (click)="login()">Login</ion-button> 
     <ion-button (click)="register()">Register</ion-button> 
+  </div>
+
+  <div text-center class="ion-padding">
+    <ion-button full icon-left (click)="toggleAppTheme()"> Change Theme </ion-button>
   </div>
 </ion-content>
