--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,4 +1,66 @@
-<ion-content color="primary" padding>
+
+
+<ion-content color="primary" padding class="theme24">
+  <form #form="ngForm" (ngSubmit)="login(form)">
+    <ion-grid>
+      <ion-row color="primary" justify-content-center>
+        <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+          <div text-center>
+            <h3>Login</h3>
+          </div>
+          <div padding>
+            <ion-item>
+              <ion-input name="phone" type="text" placeholder="0123456789" ngModel required></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-input name="password" type="password" placeholder="Password" ngModel required></ion-input>
+            </ion-item>
+          </div>
+          <div padding>
+            <ion-button size="large" type="submit" [disabled]="form.invalid" expand="block">Login</ion-button>
+          </div>
+        </ion-col> 
+
+        <div text-center>
+          If you don't have an account, please <a routerLink='/register'>
+          register</a> first! - OR - back to <a routerLink='/home'>Home</a>
+        </div>
+    </ion-row>
+    </ion-grid>
+  </form>
+</ion-content>
+
+<ion-content color="primary" padding *ngIf="theme_2">
+  <form #form="ngForm" (ngSubmit)="login(form)">
+    <ion-grid>
+      <ion-row color="primary" justify-content-center>
+        <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+          <div text-center>
+            <h3>Login</h3>
+          </div>
+          <div padding>
+            <ion-item>
+              <ion-input name="phone" type="text" placeholder="0123456789" ngModel required></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-input name="password" type="password" placeholder="Password" ngModel required></ion-input>
+            </ion-item>
+          </div>
+          <div padding>
+            <ion-button size="large" type="submit" [disabled]="form.invalid" expand="block">Login</ion-button>
+          </div>
+        </ion-col> 
+
+        <div text-center>
+          If you don't have an account, please <a routerLink='/register'>
+          register</a> first!
+        </div>
+    </ion-row>
+    </ion-grid>
+  </form>
+</ion-content>
+
+<ion-content color="primary" padding *ngIf="theme_3">
   <form #form="ngForm" (ngSubmit)="login(form)">
     <ion-grid>
       <ion-row color="primary" justify-content-center>
