--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-  <div text-center class="ion-padding test-black">
+  <div text-center class="ion-padding"> 
     Thank you for watching my first app with ionic.
     <p>For More Information <a target="_blank" rel="noopener" href="https://github.com/aboualama">Aboualama</a>.</p>
     
