--- a/src/theme/red.theme.scss
+++ b/src/theme/red.theme.scss
@@ -1,10 +1,13 @@
 
 :root {
   .red-theme {  
-      .test-black {
-        color: rgb(230, 15, 15);
-        font-size: 12px;
-      } 
-
+    ion-title{
+      background-color: rgb(0, 0, 0);
+      color: rgb(255, 255, 255);
+    }
+    ion-content{
+      --background-color: rgb(185, 11, 11);
+      --color: rgb(230, 15, 15);
+    }
   } 
 }
